Expanded markup. Changed variable names.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -11,7 +11,122 @@
     "### Revised March 6, 2021\r\n",
     "Added comments many comments to make code and physics more understandable. \r\n",
     "### Revised March 18, 2021 ###\r\n",
-    "Corrected outer product with operators. They need to mix the two bases, i.e., identity basis of one and operator of other basis. Also, the order of bases in CompositeBasis was not consistent with the rest. It worked, since both bases were spin-1/2, but won't work, when we start combining other angular momentum values.  "
+    "Corrected outer product with operators. They need to mix the two bases, i.e., identity basis of one and operator of other basis. Also, the order of bases in CompositeBasis was not consistent with the rest. It worked, since both bases were spin-1/2, but won't work, when we start combining other angular momentum values. \r\n",
+    "### Revised March 25, 2021 ###\r\n",
+    "Added additional markup. Changed variable names. \r\n",
+    "\r\n",
+    "## Introduction ##\r\n",
+    "As a first task, we will try to describe the hyperfine interaction and Zeeman effect in the Hydrogen atom 1s state. \r\n",
+    "We will follow the textbook by Claude Cohen-Tannoudji, Bernard Diu and Frank Laloe, __Quantum Mechanics__, vol. 2, ISBN 978-0-471-16435-7. The calculations are described in Chapter XII.E. Chapter X on the addition of angular momenta is also very useful, in particular Chapter X.B. on the addition of two spin-1/2 spins. Also useful is its appendix A<sub>X</sub> with examples of addition of angular momentum. Another useful tutorial from the ESR perspective can be found in [this set of slides](https://www3.pi2.uni-stuttgart.de/official/g.denninger/GKMR2005/PDF/hyperfine_interaction.pdf) from the University of Stuttgart.  \r\n",
+    "\r\n",
+    "## The Hamiltonian ##\r\n",
+    "### General expression ###\r\n",
+    "The Hamiltonian $H$ of the hydrogen atom can be given by the following equation:\r\n",
+    "$$\r\n",
+    "H = m_ec^2 +H_0 + W_{mv} + W_{SO} + W_D + W_{hf} + W_Z + ..., \r\n",
+    "\\tag{1}\r\n",
+    "$$ \r\n",
+    "where $m_ec^2$ is the rest mass of the electron, $H_0$ is the non-relativistic Hamiltonian of the Coulomb interaction, $W_{mv}$, $W_{SO}$, $W_D$ are the fine structure terms, $W_{hf}$ is the hyperfine structure term, and $W_Z$ is the Zeeman term [see Cohen-Tannoudji, XII.B., eq. (B-1)]. \r\n",
+    "\r\n",
+    "The zeroth order, non-relativistic Hamiltonian $H_0$ is given by:\r\n",
+    "$$\r\n",
+    "H_0=\\frac{\\mathbf{P}^2}{2\\mu} + V(R),\r\n",
+    "\\tag{2}\r\n",
+    "$$ \r\n",
+    "where $\\mu$ is the reduced mass of the electron and V(R) is the Coulomb interaction, which is $-\\frac{q^2}{4\\pi\\epsilon_0}$ in SI units or $-\\frac{e^2}{R}$ in CGS units, with $\\mathbf{P}$ the momentum and $R$ the distance between the electron and the proton.\r\n",
+    "\r\n",
+    "### Fine structure terms ###\r\n",
+    "The term $W_{mv}$ describes the variation of mass with velocity as a result of the special theory of relativity. The order of magnitude of this correction to the hamiltonian can be described as\r\n",
+    "$$\r\n",
+    "\\frac{W_{mv}}{H_O} \\simeq \\alpha^2 \\simeq (\\frac{1}{137})^2.\r\n",
+    "$$\r\n",
+    "For the hydrogen atom, with the value of $H_0$ around 13.6 eV, this relation means that $W_{mv}\\simeq 10^{-3}$ eV (See Cohen-Tannoudji XII.1.b.$\\alpha$.)\r\n",
+    "\r\n",
+    "The term $W_{SO}$ is also known as the spin-orbit interaction caused by the interaction of the electron's spin magnetic moment with the magnetic field that it \"sees\" as a result of its orbital motion in the electrostatic field of the proton.  In particular,\r\n",
+    "$$\r\n",
+    "W_{SO}=\\frac{e^2}{m_e^2c^2}\\frac{1}{R^3}\\mathbf{L}\\cdot\\mathbf{S},\r\n",
+    "\\tag{3}\r\n",
+    "$$\r\n",
+    "where $\\mathbf{L}$ is the orbital angular momentum vector and $S$ is the spin angular momentum vector of the electron. The spin-orbit term is of a similar order of magnitude as $W_{mv}$, as is also the Darwin term $W_D$, another relativistic correction, which we will not discuss. (See Cohen-Tannoudji, XII.1.b.$\\beta$ and XII.1.b.$\\gamma)$.\r\n",
+    "\r\n",
+    "### The hyperfine term ###\r\n",
+    "The hyperfine term is given by\r\n",
+    "$$\r\n",
+    "W_{hf} = -\\frac{\\mu_0}{4 \\pi} \\{ \\frac{q}{m_e R^3} \\mathbf{L} \\cdot \\mathbf{M}_I + \\frac{1}{R^3} [ 3(\\mathbf{M}_S \\cdot \\mathbf{n}) (\\mathbf{M}_I \\cdot \\mathbf{n}) - \\mathbf{M}_S \\cdot \\mathbf{M}_I ] + \\frac{8 \\pi}{3} \\mathbf{M}_S \\cdot \\mathbf{M}_I \\delta(\\mathbf{R}) \\},\r\n",
+    "\\tag{4}\r\n",
+    "$$\r\n",
+    "where $\\mathbf{M}_S$ is the spin magnetic moment of the electron, $\\mathbf{M}_I$ is the spin magnetic moment of the nucleus, and $\\mathbf{n}$ is the unit vector for the straight line between the nucleus and the electron, pointing towards the electron. Now in the 1s level of Hydrogen, the first two terms of $W_{hf}$ are zero. The first term is obviously zero, since $L=0$ in the $n=1$ state. The second term represents the dipole-dipole interaction, which is zero because of the spherical symmetry of the 1s state (See Cohen-Tannoudji, B<sub>XI</sub>.3). The third term is called the contact term, and it is usually represented as\r\n",
+    "$$\r\n",
+    "\\mathscr{A}\\mathbf{I}\\cdot\\mathbf{S},\r\n",
+    "\\tag{5}\r\n",
+    "$$ \r\n",
+    "where $\\mathscr{A}$ is a constant given by\r\n",
+    "$$\r\n",
+    "\\frac{\\mathscr{A}\\hbar}{2 \\pi}= 1 \\; 420 \\; 405 \\; 751 \\, . \\, 768 \\pm 0.001 \\quad \\mathrm{Hz}.\r\n",
+    "\\tag{6}\r\n",
+    "$$\r\n",
+    "\r\n",
+    "Moreover, if we define the total angular momentum $\\mathbf{F}$, which, in this case where $L=0$ is given by\r\n",
+    "$$\r\n",
+    "\\mathbf{F}=\\mathbf{S}+\\mathbf{I},\r\n",
+    "\\tag{7}\r\n",
+    "$$\r\n",
+    "then the operator $\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S}$ is diagonal in the $\\left| F, m_F \\right>$ basis, and we can write\r\n",
+    "$$\r\n",
+    "\\mathbf{I} \\cdot \\mathbf{S} = \\frac{1}{2}(\\mathbf{F}^2-\\mathbf{I}^2-\\mathbf{S}^2),\r\n",
+    "$$\r\n",
+    "so that\r\n",
+    "$$\r\n",
+    "\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} \\left| F,m_F \\right>= \\frac{\\mathscr{A} \\hbar^2}{2} [F(F+1) - I(I+1) -S(S+1)] \\left |F,m_F \\right>.\r\n",
+    "\\tag{8}\r\n",
+    "$$ \r\n",
+    "For $I=S=1/2$, there are two possibilities: a triplet state with $F=1$ with an energy (at zero magnetic field) $\\mathscr{A}\\hbar^2/4$ and a singlet state with $F=0$ and energy $-(3/4)\\mathscr{A}\\hbar^2$.\r\n",
+    "\r\n",
+    "### The Zeeman term ###\r\n",
+    "The Zeeman term describes the interaction of the external magnetic field $B_0$ with the nuclear and spin magnetic moments:\r\n",
+    "$$\r\n",
+    "W_Z= -\\mathbf{B_0} \\cdot (\\mathbf{M_L} + \\mathbf{M_S} + \\mathbf{M_I}).\r\n",
+    "\\tag{9}\r\n",
+    "$$  \r\n",
+    "If we define Larmor frequencies corresponding to the magnetic moments of the respectve spinns, we obtain\r\n",
+    "$$\r\n",
+    "\\omega_0=-\\frac{q}{2m_e}B_0\r\n",
+    "\\tag{10}\r\n",
+    "$$\r\n",
+    "for the electron spin and\r\n",
+    "$$\r\n",
+    "\\omega_n=-\\frac{q}{2M_p}B_0\r\n",
+    "\\tag{11}\r\n",
+    "$$\r\n",
+    "for the proton spin. Since the proton mass $M_p \\simeq 2000 m_e$, $\\omega_0 >> \\omega_n$.\r\n",
+    "In any case, we have now\r\n",
+    "$$\r\n",
+    "W_Z=\\omega_0(L_z+2S_z)  + \\omega_n I_z.\r\n",
+    "\\tag{12}\r\n",
+    "$$\r\n",
+    "[See Cohen-Tannoudji, XII.E.1.a., eqns (E-1--E3).]\r\n",
+    "\r\n",
+    "Putting it all together, we can express the hyperfine interaction in the presence of an external electric field as follows:\r\n",
+    "$$\r\n",
+    "\\left| n=1; l=0; m_l=0; m'_S; m'_I | \\omega_0(L_z+2S_z)+\\omega_n I_z | n=1; l=0; m_L=0; m_S; m_I \\right>,\r\n",
+    "\\tag{13}\r\n",
+    "$$\r\n",
+    "which means that we must diagonalize the operator $\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} + 2\\omega_0 S_z + \\omega_n I_z$ in the basis of our choice [see Cohen-Tannoudji, XII.1.b., eqns (E-5) and (E-7)].\r\n",
+    "\r\n",
+    "Now we have two choices:\r\n",
+    "\r\n",
+    " (1) We can work in the basis defined by $\\left| m_I m_S \\right>$, in which $I_z$ and $S_z$ are diagonal. The operator $\\mathbf{I} \\cdot \\mathbf{S}$ will not be diagonal, but we can express it in terms of known operators as\r\n",
+    "$$\r\n",
+    "\\mathbf{I} \\cdot \\mathbf{S} = I_z S_z + \\frac{1}{2} (I_{+}S_{-} + I_{-}S_{+}) \r\n",
+    "\\tag{14}\r\n",
+    "$$\r\n",
+    "[see Cohen-Tannoudji XII.2.b., eqn. (E-19).]\r\n",
+    "\r\n",
+    " (2) We can work in the $\\left| Fm \\right>$ basis, in which \r\n",
+    " $$\r\n",
+    " \\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} = \\frac{\\mathscr{A}}{2}(\\mathbf{F}^2-\\mathbf{I}^2-\\mathbf{S}^2)\r\n",
+    " $$\r\n",
+    " is diagonal, but we have to express the operators $I_z$ and  $S_z$ in the $\\left| Fm \\right>$ basis. "
    ]
   },
   {
@@ -75,8 +190,8 @@
    "metadata": {},
    "source": [
     "## Operators in the spin-1/2 bases\r\n",
-    "Next we will create some basic operators defined for the spin-1/2 bases. \r\n",
-    "We want the $S_z^{1/2 \\otimes 1/2}$ operator and the identity operator in each basis. \r\n",
+    "Next we will create some basic operators defined for the spin-1/2 bases. Fortunately, for the basic SpinBasis opjects, we can use functions that are predefined in QuantumOptics.jl. \r\n",
+    "We will need $S_z$, $S_{+}$, $S_{-}$, and $I_z$, $I_{+}$, and $I_{-}$ in their respective spin-1/2 bases. \r\n",
     "To make life easier, we will set $\\hbar=1$."
    ]
   },
@@ -95,16 +210,16 @@
     }
    ],
    "source": [
-    "m1basisSz=0.5*sigmaz(m1basis)               # Sz operator for S1 basis: 0.5 \\hbar [1 0; 0 -1]\r\n",
-    "m2basisSz=0.5*sigmaz(m2basis)               # Sz operator for S2 basis: 0.5 \\hbar [1 0; 0 -1]\r\n",
-    "m1basisSplus=sigmap(m1basis)                # Splus operator for S1 basis: \\hbar [0 1; 0  0]\r\n",
-    "m1basisSminus=sigmam(m1basis)               # Sminus operator for S1 basis: \\hbar [0 0; 1  0]\r\n",
-    "m2basisSplus=sigmap(m2basis)                # Splus operator for S2 basis: \\hbar [0 1; 0  0]\r\n",
-    "m2basisSminus=sigmam(m2basis)               # Sminus operator for S1 basis: \\hbar [0 0; 1  0]\r\n",
-    "m1basisIdentity=identityoperator(m1basis)   # Identity operator for S1 basis: [1 0; 0 1]\r\n",
-    "m2basisIdentity=identityoperator(m2basis)   # Identity operator for S2 basis: [1 0; 0 1]\r\n",
-    "m1basisSS=0.75*m1basisIdentity              # S^2 operator for S1 basis: 0.75 \\hbar^2 [1 0; 0 1]\r\n",
-    "m2basisSS=0.75*m2basisIdentity              # S^2 operator for S2 basis: 0.75 \\hbar^2 [1 0; 0 1]"
+    "m1basisSz= 0.5*sigmaz(m1basis)               # Sz operator for S1 basis: 0.5 \\hbar [1 0; 0 -1]\r\n",
+    "m2basisSz = 0.5*sigmaz(m2basis)               # Sz operator for S2 basis: 0.5 \\hbar [1 0; 0 -1]\r\n",
+    "m1basisS₊ = sigmap(m1basis)                # Splus operator for S1 basis: \\hbar [0 1; 0  0]\r\n",
+    "m1basisS₋ = sigmam(m1basis)               # Sminus operator for S1 basis: \\hbar [0 0; 1  0]\r\n",
+    "m2basisS₊ = sigmap(m2basis)                # Splus operator for S2 basis: \\hbar [0 1; 0  0]\r\n",
+    "m2basisS₋ = sigmam(m2basis)               # Sminus operator for S1 basis: \\hbar [0 0; 1  0]\r\n",
+    "m1basisIdentity = identityoperator(m1basis)   # Identity operator for S1 basis: [1 0; 0 1]\r\n",
+    "m2basisIdentity = identityoperator(m2basis)   # Identity operator for S2 basis: [1 0; 0 1]\r\n",
+    "m1basisS² = 0.75*m1basisIdentity              # S^2 operator for S1 basis: 0.75 \\hbar^2 [1 0; 0 1]\r\n",
+    "m2basisS² = 0.75*m2basisIdentity              # S^2 operator for S2 basis: 0.75 \\hbar^2 [1 0; 0 1]"
    ]
   },
   {
@@ -113,7 +228,19 @@
    "source": [
     "## Operators in the spin(1/2) $\\otimes$ spin(1/2) basis\r\n",
     "Now we need to express these operators in the spin(1/2) $\\otimes$ spin(1/2) basis. The key is the [outer product](https://en.wikipedia.org/wiki/Outer_product). \r\n",
-    "\r\n"
+    "Thus, in the $\\left| m_I m_S \\right>$ basis, \r\n",
+    "$$\r\n",
+    "S_z^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_z^{m_S} \\\\\r\n",
+    "S_{+}^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_{+}^{m_S} \\\\\r\n",
+    "S_{-}^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_{-}^{m_S} \\\\\r\n",
+    "I_z^{m_I m_S} = Iz^{m_I} \\otimes \\mathbb{1}^{m_S} \\\\\r\n",
+    "I_{+}^{m_I m_S} = I_{+}^{m_I} \\otimes \\mathbb{1}^{m_S}  \\\\\r\n",
+    "I_{-}^{m_I m_S} = I_{-}^{m_I} \\otimes \\mathbb{1}^{m_S}  \\\\\r\n",
+    "$$\r\n",
+    "And then, we can use\r\n",
+    "$$\r\n",
+    "\\mathbf{I} \\cdot \\mathbf{S} = I_z S_z + \\frac{1}{2} (I_{+}S_{-} + I_{-}S_{+}) \r\n",
+    "$$"
    ]
   },
   {
@@ -133,12 +260,20 @@
    "source": [
     "S1z=tensor(m2basisIdentity,m1basisSz)           # S1z in S1S2 basis: \\hbar diagonal(0.5,0.5,-0.5,-0.5)\r\n",
     "S2z=tensor(m2basisSz,m1basisIdentity)           # S2z in S1S2 basis: \\hbar digaonal(0.5,-0.5,0.5,-0.5)\r\n",
-    "S1plus=tensor(m2basisIdentity,m1basisSplus)     # S1plus in S1S2 basis \r\n",
-    "S1minus=tensor(m2basisIdentity,m1basisSminus)   # S1minus in S1S2 basis\r\n",
-    "S2plus=tensor(m2basisSplus,m1basisIdentity)     # S2plus in S1S2 basis \r\n",
-    "S2minus=tensor(m2basisSminus,m1basisIdentity)   # S2minus in S1S2 basis\r\n",
-    "S1S2=S1z*S2z+0.5*(S2plus*S1minus+S2minus*S1plus)    # S1̇ S2 in S1S2 basis\r\n",
-    "#See eq. (E-19) of Chapter XII.3.b. of Cohen-Tannoudji Quantum Mechanics for S=S1, I=S2\r\n"
+    "S1₊=tensor(m2basisIdentity,m1basisS₊)     # S1plus in S1S2 basis \r\n",
+    "S1₋=tensor(m2basisIdentity,m1basisS₋)   # S1minus in S1S2 basis\r\n",
+    "S2₊=tensor(m2basisS₊,m1basisIdentity)     # S2plus in S1S2 basis \r\n",
+    "S2₋=tensor(m2basisS₋,m1basisIdentity)   # S2minus in S1S2 basis\r\n",
+    "S1S2=S1z*S2z+0.5*(S2₊*S1₋+S2₋*S1₊)    # S1̇ S2 in S1S2 basis\r\n",
+    "#See eq. (E-19) of Chapter XII.3.b. of Cohen-Tannoudji Quantum Mechanics for S=S1, I=S2\r\n",
+    "# In terms of the text we have above, we have also:\r\n",
+    "Sz=S1z\r\n",
+    "Iz=S2z\r\n",
+    "S₊=S1₊\r\n",
+    "S₋=S1₋\r\n",
+    "I₊=S2₊\r\n",
+    "I₋=S2₋\r\n",
+    "IS=S1S2\r\n"
    ]
   },
   {
@@ -159,7 +294,7 @@
     "# Now define S^2 in the S1S2 basis. \r\n",
     "# See eq (B-18) of Chapter X of Cohen-Tannoudji Quantum Mechanics\r\n",
     "# Should be \\hbar^2 [2 0 0 0; 0 1 1 0; 0 1 1 0; 0 0 0 2]\r\n",
-    "SS=0.75*identityoperator(m1m2basis) + 0.75*identityoperator(m1m2basis) + 2*S1z*S2z +S1plus*S2minus +S1minus*S2plus "
+    "S²=0.75*identityoperator(m1m2basis) + 0.75*identityoperator(m1m2basis) + 2*S1z*S2z +S1₊*S2₋ +S1₋*S2₊ "
    ]
   },
   {
@@ -206,6 +341,56 @@
     "F3=dd                                       # | ↓, ↓ >\r\n",
     "F4=(ud-du)/sqrt(2)                          # (| ↑, ↓ > - | ↓, ↑ >)/√2\r\n",
     "Fmbasis=SubspaceBasis([F1,F2,F3,F4])         # Now define the |F,m> basis using these basis vectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clebsch-Gordan (CG) Coefficients ##\r\n",
+    "In order to convert from one basis to another, we will need to use the Clebsch-Gordan coefficients. I found the discussion in chapter 15 of R. Shankar, __Principles of Quantum Mechanics__ (2nd edition),  New York: Plenum Press, 1994, ISBN 0-306-44790-8 useful. \r\n",
+    "\r\n",
+    "Suppose we have two spins $j_1$ and $j_2$ and we have expressed them in the $\\left| \\j_1 \\j_2 \\right>$ basis, but would like to express them in the $\\left| jm \\right$ basis, where $\\mathbf{J}=\\mathbf{J_1}+\\mathbf{J_2}$. We can proceed as follows.\r\n",
+    "$$\r\n",
+    "\\left |jm, j_1 j_2 \\right> = \\sum_{m_1} \\sum_{m_2} \\left| j_1 m_1, j_2 m_2 \\right> \\left< j_1 m_1, j_2 m_2 | jm \\right>.\r\n",
+    "$$\r\n",
+    "The Clebsch-Gordan (CG) coefficients are the coefficients of the expansion\r\n",
+    "$$\r\n",
+    "\\left< j_1 m_1, j_2 m_2 | jm, j_1 j_2 \\right> \\equiv \\left< j_1 m_1, j_2 m_2  | jm \\right>.\r\n",
+    "$$\r\n",
+    "\r\n",
+    "The CG coefficients have the following properties:\r\n",
+    "1. $\\left< j_1 m_1, j_2 m_2 | jm \\right> \\neq 0$ only if $j_1 - j_2 \\leq j \\leq j_1 + j_2$\r\n",
+    "2. $\\left< j_1 m_1, j_2 m_2 | jm \\right> \\neq 0$ only if $m_1 + m_2 = m$\r\n",
+    "3. They are real (by convention)\r\n",
+    "4. $\\left< j_1 j_1, j_2 (j-j_1) | jj \\right>$ is positive (by convention)\r\n",
+    "5. $\\left< j_1 m_1, j_2 m_2  | jm \\right> = (-1)^{j_1 + j_2 -j} \\left< j_1 (-m_1), j_2 (-m_2)  | j(-m) \\right>$ .\r\n",
+    "\r\n",
+    "He also treats the spin-1/2 $\\otimes$ spin-1/2 problem:\r\n",
+    "$$\r\n",
+    "\\begin{pmatrix}\r\n",
+    " \\left| 1,1 \\right> \\\\ \\left| 1,0 \\right> \\\\ \\left| 1,-1 \\right> \\\\ \\left| 0,0 \\right> \r\n",
+    " \\end{pmatrix}\r\n",
+    " \\begin{pmatrix} \r\n",
+    " 1 &0 &0 &0 \\\\ 0 &1/\\sqrt{2} &1/\\sqrt{2} &0 \\\\ 0 &0 &0 &1 \\\\ 0 &1/\\sqrt{2} &-1/\\sqrt{2} &0 \r\n",
+    " \\end{pmatrix}\r\n",
+    " \\begin{pmatrix} \r\n",
+    " \\left| ++ \\right> \\\\ \\left| +- \\right> \\\\ \\left| -+ \\right> \\\\ \\left| -- \\right>   \r\n",
+    " \\end{pmatrix} \r\n",
+    "$$\r\n",
+    "\r\n",
+    "The inverse would be\r\n",
+    "$$\r\n",
+    " \\begin{pmatrix} \r\n",
+    " \\left| ++ \\right> \\\\ \\left| +- \\right> \\\\ \\left| -+ \\right> \\\\ \\left| -- \\right>   \r\n",
+    " \\end{pmatrix} \r\n",
+    "  \\begin{pmatrix} \r\n",
+    " 1 &0 &0 &0 \\\\ 0 &1/\\sqrt{2} &0 &1/\\sqrt{2} \\\\ 0 &1/\\sqrt{2} &0 &-1/\\sqrt{2} \\\\ 0 &0 &1 &0 \r\n",
+    " \\end{pmatrix}\r\n",
+    " \\begin{pmatrix}\r\n",
+    " \\left| 1,1 \\right> \\\\ \\left| 1,0 \\right> \\\\ \\left| 1,-1 \\right> \\\\ \\left| 0,0 \\right> \r\n",
+    " \\end{pmatrix}\r\n",
+    "$$"
    ]
   },
   {
@@ -280,6 +465,14 @@
     "# We use the vectorized dot-function Float64 \r\n",
     "# to convert each element of C to a Float64.\r\n",
     "C=Float64.(C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transforming operators from one basis to another ##\r\n",
+    "To learn about change of bases, I recommend the book J.J. Sakurai, __Modern Quantum Mechanics__, Reading, MA: Addison-Wesley Publishing Company, Inc., 1994 ISBN 0-201-53929-2. How to change from one basis to another is described in Chapter 1.5. "
    ]
   },
   {
@@ -381,7 +574,7 @@
     }
    ],
    "source": [
-    "# Now when we take the Hermitian conjugage, the QuantumOptics package\r\n",
+    "# Now when we take the Hermitian conjugate, the QuantumOptics package\r\n",
     "# should handle everything for us. \r\n",
     "TransformMatrixDagger=dagger(TransformMatrix)"
    ]
