Updated markup, esp. about change of basis.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -120,6 +120,7 @@
     " (2) We can work in the $\\left| Fm \\right>$ basis, in which \r\n",
     " $$\r\n",
     " \\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} = \\frac{\\mathscr{A}}{2}(\\mathbf{F}^2-\\mathbf{I}^2-\\mathbf{S}^2)\r\n",
+    " \\tag{15}\r\n",
     " $$\r\n",
     " is diagonal, but we have to express the operators $I_z$ and  $S_z$ in the $\\left| Fm \\right>$ basis. "
    ]
@@ -361,7 +362,13 @@
     "4. $\\left< j_1 j_1, j_2 (j-j_1) | jj \\right>$ is positive (by convention)\r\n",
     "5. $\\left< j_1 m_1, j_2 m_2  | jm \\right> = (-1)^{j_1 + j_2 -j} \\left< j_1 (-m_1), j_2 (-m_2)  | j(-m) \\right>$ .\r\n",
     "\r\n",
-    "He also treats the spin-1/2 $\\otimes$ spin-1/2 problem:\r\n",
+    "He also treats the spin-1/2 $\\otimes$ spin-1/2 problem, i.e., when $j_1=1/2$ and $j_2=1/2$. Then\r\n",
+    "$$\r\n",
+    "\\frac{1}{2} \\otimes \\frac{1}{2}=1 \\oplus 0.\r\n",
+    "$$\r\n",
+    "In other words, $j=1$ (triplet) or $j=0$ (singlet).\r\n",
+    "\r\n",
+    "Now, in order to convert from the $\\left| j_1 j_2; m_1 m_2\\right>$ basis to the $\\left|j_1 j_2; jm \\right>$ basis,  we can use a matrix made up of CG coefficients: \r\n",
     "$$\r\n",
     "\\begin{pmatrix}\r\n",
     " \\left| 1,1 \\right> \\\\ \\left| 1,0 \\right> \\\\ \\left| 1,-1 \\right> \\\\ \\left| 0,0 \\right> \r\n",
@@ -467,7 +474,31 @@
    "metadata": {},
    "source": [
     "## Transforming operators from one basis to another ##\r\n",
-    "To learn about change of bases, I recommend the book J.J. Sakurai, __Modern Quantum Mechanics__, Reading, MA: Addison-Wesley Publishing Company, Inc., 1994 ISBN 0-201-53929-2. How to change from one basis to another is described in Chapter 1.5. "
+    "To learn about change of bases, I recommend the book J.J. Sakurai, __Modern Quantum Mechanics__, Reading, MA: Addison-Wesley Publishing Company, Inc., 1994 ISBN 0-201-53929-2. How to change from one basis to another is described in Chapter 1.5. \r\n",
+    "Suppose we start with a basis that we will call $\\left| a' \\right>$. We want to convert to another basis described by $\\left| \\alpha \\right>$. \r\n",
+    "Suppose there is an operator $U$ in this basis, which works as follows:\r\n",
+    "$$\r\n",
+    "\\left< a^{(k)} | U | a^{(l)} \\right> = \\left< a^{(k)} | b^{(l)} \\right>.\r\n",
+    "$$\r\n",
+    "In other words, $\\left| b \\right> = U \\left|  a \\right>$.\r\n",
+    "\r\n",
+    "Now, to obtain the expansion coefficients $\\left< b' | \\alpha \\right>$ in the new basis, we do the following:\r\n",
+    "$$\r\n",
+    "\\left< b^{k}| \\alpha \\right> = \\sum_l \\left< b^{(k)}  |a^{(l)}\\right> \\left< a^{(l)}  | \\alpha \\right> = \\sum_l \\left< a^{(k)} |  U^{\\dagger} |a^{(l)}\\right> \\left< a^{(l)} | \\alpha \\right>.\r\n",
+    "$$\r\n",
+    "\r\n",
+    "Note that \r\n",
+    "$$\r\n",
+    "\\sum_l   \\left| a^{(l)} \\right> \\left< a^{(l)} \\right| = \\mathbb(1).\r\n",
+    "$$\r\n",
+    "\r\n",
+    "In other words, (New) = $U^{\\dagger}$ (Old).\r\n",
+    "\r\n",
+    "Now to transform an operator X, we need to perform a similarity transformation:\r\n",
+    "$$\r\n",
+    "\\mathbf{X}'=U^{\\dagger}\\mathbf{X}U.\r\n",
+    "$$\r\n",
+    "\r\n"
    ]
   },
   {
