Completed explanatory text.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -155,7 +155,63 @@
     "## Creating Bases\r\n",
     "In this section, we will test the SpinBasis function to create spin-1/2 bases for the electron spin (S1) and the proton spin (S2).\r\n",
     "Note that the electron spin is sometimes referred to as S and the proton (nuclear) spin as I.\r\n",
-    "Then, we will create a composite basis to describe a Hydrogen atom in the 1s state from these two bases. "
+    "Then, we will create a composite basis to describe a Hydrogen atom in the 1s state from these two bases. \r\n",
+    "In each case, we have\r\n",
+    "$$\r\n",
+    " \\left| + \\right>    \r\n",
+    " =\r\n",
+    "  \\begin{pmatrix} \r\n",
+    " 1 \\\\ 0    \r\n",
+    " \\end{pmatrix}\r\n",
+    "$$\r\n",
+    "and\r\n",
+    "$$\r\n",
+    " \\left| - \\right>    \r\n",
+    " =\r\n",
+    "  \\begin{pmatrix} \r\n",
+    " 0 \\\\ 1    \r\n",
+    " \\end{pmatrix}\r\n",
+    "$$\r\n",
+    "\r\n",
+    "We can combine these two bases using the outer product:\r\n",
+    "$$\r\n",
+    "\\left| m_I m_S \\right> = \\left| I=1/2 \\right> \\otimes \\left| S=1/2 \\right>. \r\n",
+    "$$\r\n",
+    "\r\n",
+    "We can also use the outer product to understand what are the new basis states:\r\n",
+    "$$\r\n",
+    "\\left| + + \\right> = \\left| m_I=+1/2 \\right> \\otimes \\left| m_S=+1/2 \\right> \\\\ \r\n",
+    "\\left| + - \\right> = \\left| m_I=+1/2 \\right> \\otimes \\left| m_S=-1/2 \\right> \\\\\r\n",
+    "\\left| - + \\right> = \\left| m_I=-1/2 \\right> \\otimes \\left| m_S=+1/2 \\right> \\\\\r\n",
+    "\\left| - - \\right> = \\left| m_I=-1/2 \\right> \\otimes \\left| m_S=-1/2 \\right>\r\n",
+    "$$\r\n",
+    "\r\n",
+    "These basis vectors can be written as follows:\r\n",
+    "$$\r\n",
+    " \\left| ++ \\right>    \r\n",
+    " =\r\n",
+    "  \\begin{pmatrix} \r\n",
+    " 1 \\\\ 0 \\\\ 0 \\\\ 0    \r\n",
+    " \\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    " \\left| +- \\right>    \r\n",
+    " =\r\n",
+    "  \\begin{pmatrix} \r\n",
+    " 0 \\\\ 1 \\\\ 0 \\\\ 0    \r\n",
+    " \\end{pmatrix}\r\n",
+    " \\qquad\r\n",
+    " \\left| -+ \\right>    \r\n",
+    " =\r\n",
+    " \\begin{pmatrix} \r\n",
+    " 0 \\\\ 0 \\\\ 1 \\\\ 0    \r\n",
+    " \\end{pmatrix}\r\n",
+    " \\qquad\r\n",
+    " \\left| -- \\right>    \r\n",
+    " =\r\n",
+    " \\begin{pmatrix} \r\n",
+    " 0 \\\\ 0 \\\\ 0 \\\\ 1    \r\n",
+    " \\end{pmatrix}\r\n",
+    "$$"
    ]
   },
   {
@@ -188,7 +244,42 @@
     "## Operators in the spin-1/2 bases\r\n",
     "Next we will create some basic operators defined for the spin-1/2 bases. Fortunately, for the basic SpinBasis opjects, we can use functions that are predefined in QuantumOptics.jl. \r\n",
     "We will need $S_z$, $S_{+}$, $S_{-}$, and $I_z$, $I_{+}$, and $I_{-}$ in their respective spin-1/2 bases. \r\n",
-    "To make life easier, we will set $\\hbar=1$."
+    "To make life easier, we will set $\\hbar=1$.\r\n",
+    "\r\n",
+    "Again, in each spin-1/2 basis, we can define operators:\r\n",
+    "$$\r\n",
+    " S_z\r\n",
+    " =\r\n",
+    " \\frac{\\hbar}{2} \\begin{pmatrix} \r\n",
+    " 1 & 0 \\\\ 0 & 1    \r\n",
+    " \\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    "S_{+}\r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 0 \\\\ 1 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    "S_{-}\r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 1 \\\\ 0 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "\r\n",
+    "In general,\r\n",
+    "$$\r\n",
+    "J_{\\pm} \\left| j,m \\right> = \\hbar \\sqrt((j\\mp m)(j \\pm m+1)) \\left|j, m \\pm 1 \\right>.\r\n",
+    "$$\r\n",
+    "\r\n",
+    "Thus, $S_{-} \\left| + \\right> = \\hbar \\left| - \\right >$, but $S_{+} \\left| + \\right> = 0$, as can be checked with the matrices.\r\n",
+    "\r\n",
+    "If we want to \"measure\" the $z$-component of the spin of some state $\\left| \\alpha \\right>$, we can just use $<S_z>= \\left< \\alpha | S_z | \\alpha \\right>$, which can be expressed in matrix form as:\r\n",
+    "$$\r\n",
+    "\\left< S_z \\right> =\\begin{pmatrix} \\alpha_1^{\\dagger} \\alpha_2^{\\dagger} \\end{pmatrix} \\begin{pmatrix} \\frac{\\hbar}{2} & 0 \\\\ 0 & \\frac{\\hbar}{2} \\end{pmatrix} \\begin{pmatrix} \\alpha_1 \\\\ \\alpha_2 \\end{pmatrix} = \\frac{\\hbar}{2}(\\alpha_1^{\\dagger}\\alpha_1 + \\alpha_2^{\\dagger}\\alpha_2).\r\n",
+    "$$\r\n"
    ]
   },
   {
@@ -229,13 +320,69 @@
     "S_z^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_z^{m_S} \\\\\r\n",
     "S_{+}^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_{+}^{m_S} \\\\\r\n",
     "S_{-}^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_{-}^{m_S} \\\\\r\n",
-    "I_z^{m_I m_S} = Iz^{m_I} \\otimes \\mathbb{1}^{m_S} \\\\\r\n",
+    "I_z^{m_I m_S} = I_z^{m_I} \\otimes \\mathbb{1}^{m_S} \\\\\r\n",
     "I_{+}^{m_I m_S} = I_{+}^{m_I} \\otimes \\mathbb{1}^{m_S}  \\\\\r\n",
     "I_{-}^{m_I m_S} = I_{-}^{m_I} \\otimes \\mathbb{1}^{m_S}  \\\\\r\n",
     "$$\r\n",
+    "\r\n",
+    "In this case, according to the way have defined things, we have\r\n",
+    "$$\r\n",
+    "S_z=\\mathbb{1}^{m_I} \\otimes S_z^{m_S}\r\n",
+    "=\r\n",
+    "\\frac{\\hbar}{2}\r\n",
+    "\\begin{pmatrix}\r\n",
+    "1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & -1 & 0 \\\\ 0 & 0 & 0 & -1\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "$$\r\n",
+    "I_z= S_z^{m_I} \\otimes  \\mathbb{1}^{m_S}\r\n",
+    "=\r\n",
+    "\\frac{\\hbar}{2}\r\n",
+    "\\begin{pmatrix}\r\n",
+    "1 & 0 & 0 & 0 \\\\ 0 & -1 & 0 & 0 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & -1\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "$$\r\n",
+    "S_{+}= \\mathbb{1}^{m_I} \\otimes S_{+}^{m_S}   \r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "$$\r\n",
+    "S_{-}= \\mathbb{1}^{m_I} \\otimes S_{-}^{m_S}  \r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\\\ 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "$$\r\n",
+    "I_{+}= I_{+}^{m_I} \\otimes \\mathbb{1}^{m_S}\r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 0 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "$$\r\n",
+    "I_{-}=  I_{-}^{m_I} \\otimes \\mathbb{1}^{m_S} \r\n",
+    "=\r\n",
+    "\\hbar\r\n",
+    "\\begin{pmatrix}\r\n",
+    "0 & 0 & 0 & 0 \\\\ 1 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 1 & 0\r\n",
+    "\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "\r\n",
     "And then, we can use\r\n",
     "$$\r\n",
     "\\mathbf{I} \\cdot \\mathbf{S} = I_z S_z + \\frac{1}{2} (I_{+}S_{-} + I_{-}S_{+}) \r\n",
+    "$$\r\n",
+    "\r\n",
+    "In matrix terms, this expression becomes\r\n",
+    "$$\r\n",
+    "\\mathbf{I} \\cdot \\mathbf{S} = \\frac{\\hbar^2}{4} \\begin{pmatrix} 1 & 0 &0 &0 \\\\ 0 &-1 &2 &0 \\\\ 0 &2 &-1 &0 \\\\ 0 &0 &0 &1 \\end{pmatrix}\r\n",
     "$$"
    ]
   },
@@ -489,8 +636,10 @@
     "\r\n",
     "Note that \r\n",
     "$$\r\n",
-    "\\sum_l   \\left| a^{(l)} \\right> \\left< a^{(l)} \\right| = \\mathbb(1).\r\n",
+    "\\sum_l   \\left| a^{(l)} \\right> \\left< a^{(l)} \\right| = \\mathbb{1}.\r\n",
     "$$\r\n",
+    "\r\n",
+    "Also $U^{\\dagger}U=\\mathbb{1}$.\r\n",
     "\r\n",
     "In other words, (New) = $U^{\\dagger}$ (Old).\r\n",
     "\r\n",
@@ -665,6 +814,20 @@
     "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz\r\n",
     "gₚ=5.585                         # proton g factor\r\n",
     "ωₙ=gₚ*(q/(2*Mₚ))*B₀/10^6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hamiltonian in the $\\left| m_I m_S \\right>$ basis ##\r\n",
+    "In the $\\left| m_I m_S \\right>$ basis, the operators $I_z$ and $S_z$ are diagonal. The operator $\\mathbf{I} \\cdot \\mathbf{S}$ is not, but we have calculated it above. Thus, the Hamiltonian becomes\r\n",
+    "$$\r\n",
+    "H=\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} + 2 \\omega_0 S_z + \\omega_n I_z = \\frac{\\mathscr{A}\\hbar^2}{4} \\begin{pmatrix} 1 & 0 &0 &0 \\\\ 0 &-1 &2 &0 \\\\ 0 &2 &-1 &0 \\\\ 0 &0 &0 &1 \\end{pmatrix} + 2\\omega_0 \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &1 &0 &0 \\\\ 0 &0 &-1 &0 \\\\ 0 &0 &0 &-1 \\end{pmatrix} + \\omega_n \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &-1 &0 &0 \\\\ 0 &0 &1 &0 \\\\ 0 &0 &0 &-1 \\end{pmatrix}.\r\n",
+    "$$\r\n",
+    "\r\n",
+    "We will ignore the $\\omega_n I_z$ term below, since it is much smaller than the $\\omega_0 S_z$ term. \r\n",
+    "By diagonalizing this Hamiltonian, we obtain the eigenenergies and eigenvectors. "
    ]
   },
   {
@@ -10620,6 +10783,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Hamiltonian in the $\\left| F,m \\right>$ basis ##\r\n",
+    "Alternatively, we can solve the problem in the $\\left| F,m \\right>$ basis. In this basis we have the advantage that the operator $\\mathbf{I} \\mathbf{S}$ is diagonal. However, $I_z$ and $S_z$ are not diagonal, so we will have to express them in this basis. We have found the expression for $S_z$ in this basis above, and we will ignore the $\\omega_n I_z$ for now, since it is small compared to the $\\omega_0 S_z$ term. \r\n",
+    "$$\r\n",
+    "H=\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} + 2 \\omega_0 S_z = \\frac{\\mathscr{A}\\hbar^2}{4} \\begin{pmatrix} 1 & 0 &0 &0 \\\\ 0 &1 &0 &0 \\\\ 0 &0 &1 &0 \\\\ 0 &0 &0 &-3 \\end{pmatrix} + 2 \\frac{\\hbar}{2} \\omega_0 \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &0 &0 &1 \\\\ 0 &0 &-1 &0 \\\\ 0 &1 &0 &0 \\end{pmatrix} .\r\n",
+    "$$\r\n",
+    "Again, we need to determine diagonalize this matrix to obtain the eigenvalues and eigenvectors. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -20515,6 +20690,36 @@
    ],
    "source": [
     "Plots.plot(B₀,[E1fm,E2fm,E3fm,E4fm],xaxis=\"Magnetic field B [T]\", yaxis=\"Energy [MHz]\", title=\"Hydrogen 1s level Zeeman Effect\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concluding Thoughts ##\r\n",
+    "This exercise can teach us many things about the basic formalism of writing atomic Hamiltonians in matrix form and solving for the eigenenergies and eigenvectors. However, we should keep in mind that we have examined a very special system:\r\n",
+    "1. The 1s level has no orbital angular momentum. Hence $J=S$.\r\n",
+    "2. The 1s level has no fine structure. \r\n",
+    "3. The 1s level has a spherically symmetric wave function.\r\n",
+    "As a result, we should not be surprised, if the approach for other energy levels and other atoms differs somewhat. \r\n",
+    "\r\n",
+    "In many cases, the hyperfine structure and Zeeman splitting is small compared to the fine structure, so we ignore the fine structure and deal only with the hyperfine term and the Zeeman term. The Hamiltonian for an atom that exhibits hyperfine structure in an external magnetic field is\r\n",
+    "$$\r\n",
+    "H=A_{hfs}(\\mathbf{I} \\cdot \\mathbf{J}) + \\frac{B_{hfs}}{2I(2I-1)J(2J-1)}\\{3(\\mathbf{I} \\cdot \\mathbf{J})^2 + \\frac{3}{2}(\\mathbf{I} \\cdot \\mathbf{J}) - \\mathbf{I}^2 \\mathbf{J}^2 \\} + \\mu_0 g_J J_z B_z - \\mu_0 g_I'I_z H_z , \r\n",
+    "$$\r\n",
+    "where $A_{hfs}$ and $B_{hfs}$ are experimentally measured Hyperfine constants. \r\n",
+    "\r\n",
+    "The hyperfine part of this Hamiltonian is diagonal in the $\\left| F, m \\right>$ basis, where $\\mathbf{F}=\\mathbf{J}+\\mathbf{I}$.\r\n",
+    "$F$ takes on values between $|J-I|$ and $J+I$. \r\n",
+    "Then, ignoring higher-order terms, we can write the hyperfine part of the interaction as\r\n",
+    "$$\r\n",
+    "W_{hf}=\\frac{1}{2}A_{hfs}K + B_{hfs}\\frac{\\frac{3}{2}K(K+1)-2I(I+1)J(J+1)}{4I(2I-1)J(2J-1)},\r\n",
+    "$$ \r\n",
+    "where \r\n",
+    "$$\r\n",
+    "K=F(F+1)-I(I+1)-J(J+1).\r\n",
+    "$$\r\n",
+    "We will have to express the $S_z$ and $I_z$ in the $\\left| F,m \\right>$ basis. We will follow this approach for Rubidium and Cesium, for example. "
    ]
   },
   {
